--- a/css/media.css
+++ b/css/media.css
@@ -20,6 +20,7 @@
     justify-content: center;
     list-style: none; }
     .slick-dots button {
+      outline: transparent;
       border: none;
       font-size: 0;
       height: 12px;
@@ -51,7 +52,7 @@
   .firstline__menu {
     display: none;
     position: absolute;
-    top: 148px;
+    top: 146px;
     padding-bottom: 10px;
     padding-left: 0;
     margin: 0;
