--- a/css/media.scss
+++ b/css/media.scss
@@ -37,6 +37,7 @@
         list-style: none;
 
         button {
+            outline: transparent;
             border: none;
             font-size: 0;
             height: 12px;
@@ -81,7 +82,7 @@
         &__menu {
             display: none;
             position: absolute;
-            top: 148px;
+            top: 146px;
             padding-bottom: 10px;
             padding-left: 0;
             margin: 0;
