--- a/css/style.scss
+++ b/css/style.scss
@@ -157,7 +157,7 @@ a {
     background-size: cover;
     background-position: center;
     display: flex;
-    padding-top: 155px;
+    padding: 155px 0;
     position: relative;
 
     &::before {
