--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,6 @@
 @media (max-width: 992px) {
   .ferst-screen {
-    padding-top: 100px;
+    padding: 100px;
     min-height: 500px; }
 
   .firstline__menu {
@@ -105,14 +105,9 @@
 
   .firstline__ofice {
     font-size: 12px; }
-    .firstline__ofice::before {
-      background-size: cover;
-      height: 20px;
-      width: 20px;
-      top: 2px; }
 
   .ferst-screen {
-    padding-top: 50px;
+    padding: 50px;
     min-height: 320px; }
 
   .ferst-screen__iinner {
@@ -198,6 +193,14 @@
     display: inline-block;
     width: 100%;
     line-height: 30px; } }
+@media (max-width: 320px) {
+  .firstline__ofice {
+    font-size: 12px; }
+    .firstline__ofice::before {
+      background-size: cover;
+      height: 20px;
+      width: 20px;
+      top: 2px; } }
 @media (min-width: 769px) {
   .firstline__menu {
     display: flex !important; } }
