--- a/css/media.scss
+++ b/css/media.scss
@@ -3,7 +3,7 @@
 
 @media (max-width: 992px) {
     .ferst-screen {
-        padding-top: 100px;
+        padding: 100px;
         min-height: 500px;
     }
 
@@ -161,15 +161,10 @@
     }
     .firstline__ofice {
         font-size: 12px;
-        &::before {
-            background-size: cover;
-            height: 20px;
-            width: 20px;
-            top: 2px;
-        }
     }
+
     .ferst-screen {
-        padding-top: 50px;
+        padding: 50px;
         min-height: 320px;
     }
     .ferst-screen__iinner {
@@ -217,10 +212,10 @@
             margin-bottom: 30px;
         }
         &__item {
-          height: 100px;
-          width: 140px;   
-          padding: 15px;
-          font-size: 12px;
+            height: 100px;
+            width: 140px;
+            padding: 15px;
+            font-size: 12px;
         }
         &__icon {
             width: 40px;
@@ -241,7 +236,7 @@
         &__item,
         &__item-img {
             height: 100px;
-            width: 140px; 
+            width: 140px;
         }
         &__item-quantity {
             margin-top: 6px;
@@ -265,7 +260,7 @@
         &__adress {
             margin-bottom: 10px;
         }
-        &__email{
+        &__email {
             display: block;
             padding: 10px 0;
         }
@@ -278,10 +273,18 @@
             line-height: 30px;
         }
     }
-
 }
 
 @media (max-width: 320px) {
+    .firstline__ofice {
+        font-size: 12px;
+        &::before {
+            background-size: cover;
+            height: 20px;
+            width: 20px;
+            top: 2px;
+        }
+    }
 }
 
 @media (min-width: 769px) {
