--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ a {
   background-size: cover;
   background-position: center;
   display: flex;
-  padding-top: 155px;
+  padding: 155px 0;
   position: relative; }
   .ferst-screen::before {
     content: "";
