--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ a {
     padding-right: 25px;
     border-right: 1px solid #f2f2f2; }
   .firstline__ofice {
-    padding-left: 35px;
+    margin-left: 35px;
     position: relative; }
     .firstline__ofice:hover {
       color: #c8a35f; }
@@ -70,7 +70,7 @@ a {
       content: "";
       position: absolute;
       background: url(../images/placeholder.svg);
-      left: 0;
+      left: -35px;
       top: -4px;
       height: 25px;
       width: 25px; }
