--- a/css/style.scss
+++ b/css/style.scss
@@ -96,7 +96,7 @@ a {
     }
 
     &__ofice {
-        padding-left: 35px;
+        margin-left: 35px;
         position: relative;
 
         &:hover {
@@ -107,7 +107,7 @@ a {
             content: "";
             position: absolute;
             background: url(../images/placeholder.svg);
-            left: 0;
+            left: -35px;
             top: -4px;
             height: 25px;
             width: 25px;
