--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ a {
     margin: 1px;
     height: 180px;
     width: 268px;
-    padding: 36px;
+    padding: 0 15px 36px;
     background-color: #393f47;
     text-transform: uppercase;
     font-size: 18px;
@@ -297,6 +297,10 @@ a {
     background-color: #fff;
     color: #2f343a;
     text-align: center; }
+  .about__item-img {
+    width: 200px;
+    height: 160px;
+    object-fit: cover; }
   .about__item-quantity {
     margin-top: 23px;
     font-weight: 700;
