--- a/css/style.scss
+++ b/css/style.scss
@@ -362,6 +362,7 @@ a {
         font-size: 18px;
         font-weight: 700;
         position: relative;
+        text-align: center;
         
 
         &:hover {
