--- a/css/media.scss
+++ b/css/media.scss
@@ -75,7 +75,7 @@
 
 @media (max-width: 768px) {
     .firstline .header__btn {
-        display: block;
+        display: flex;
     }
 
     .firstline {
